@@ -86,8 +86,9 @@ FIELD_FWDTARGET=mailForwardingAddress
 [DELIVERY]
 SIEVE=yes               # Run Sieve scripts as messages are delivered.
 SUBADDRESS=yes          # Use 'user+mailbox@domain' format to deliver to a mailbox.
-SIEVE_VACATION=no       # Turn on/off the Sieve Vacation extension (always on, option ignored).
-SIEVE_NOTIFY=no         # Turn on/off the Sieve Notify extension (always on, option ignored).
+SIEVE_VACATION=yes      # Turn on/off the Sieve Vacation extension.
+SIEVE_NOTIFY=no         # Turn on/off the Sieve Notify extension (not supported).
+SIEVE_DEBUG=no          # Turn on/off additional Sieve debugging.
 AUTO_NOTIFY=no          # Use the auto_notify table to send email notifications.
 AUTO_REPLY=no           # Use the auto_reply table to send away messages.
 #AUTO_NOTIFY_SUBJECT    # Defaults to "NEW MAIL NOTIFICATION"
